cambios en el menu

--- a/src/html/MenuCoreDefense.html
+++ b/src/html/MenuCoreDefense.html
@@ -71,8 +71,10 @@
 
 		#main{
     		zoom: 0.5;
-   		 -moz-transform: scale(0.5);
+			-moz-transform: scale(0.5);
+			width: 90vh;
 		}
+
 	</style>
 	<script type="text/javascript">
 		if (window.localStorage.getItem("idioma") === null){
