--- a/index.html
+++ b/index.html
@@ -160,11 +160,18 @@
 								<h2>Alexander Matos</h2>	
 								<p>Programmer</p>
 							</div>
+
 							<div class="col-sm-4">
 								<img class="img-fluid" src="src/images/jaime.png" alt="Jaime">
 								<h2>Jaime Calvo</h2>	
 								<p>Programmer</p>
 							</div>
+
+							<div class="col-sm-4">
+									<img class="img-fluid" src="src/images/sloth.JPG" alt="Jaime">
+									<h2>Nuestra Mascota</h2>	
+									<p>Chico de los cafés</p>
+								</div>
 						</div>
 					</div>
 
