corregida carga menu

--- a/src/html/Core Defense Movil.html
+++ b/src/html/Core Defense Movil.html
@@ -184,7 +184,7 @@
         }
 
         function volverMenu(){
-            window.location = "MenuCoreDefense.html";
+            window.location = "../../index.html";
         }
     </script>
 </head>
