--- a/src/html/Core Defense.html
+++ b/src/html/Core Defense.html
@@ -153,7 +153,7 @@
         }
 
         function volverMenu(){
-            window.location = "MenuCoreDefense.html";
+            window.location = "../../index.html";
         }
         
 		startNS();
